# operator-dot

./: README.md
emulation/: operator_dot.h  test.cpp
examples/: CMakeLists.txt  asynchronous_proxy.cpp  duck.cpp  poly.cpp  properties.cpp  rpc.cpp  variant.cpp  vector.cpp
operator-dot/: operator_dot.h  test  test.cpp  test_simple.cpp
